{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 79,
  "lineage": "05e3facd-c481-f812-ee5b-cbce3598556e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "3000",
                  "3001"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-24T10:15:19.105-07:00",
            "deny": [],
            "description": "Allow HTTP, HTTPS, and custom ports for backend and frontend",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/p2-so1-201709282/global/firewalls/allow-traffic",
            "log_config": [],
            "name": "allow-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/p2-so1-201709282/global/networks/p2-so1-201709282-vpc",
            "priority": 1000,
            "project": "p2-so1-201709282",
            "self_link": "https://www.googleapis.com/compute/v1/projects/p2-so1-201709282/global/firewalls/allow-traffic",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-vpc-connector-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-04-24T10:48:03.915-07:00",
            "deny": [],
            "description": "Permitir tráfico entrante desde el VPC Connector a la VPC",
            "destination_ranges": [
              "10.10.0.0/24"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/p2-so1-201709282/global/firewalls/allow-vpc-connector-inbound",
            "log_config": [],
            "name": "allow-vpc-connector-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/p2-so1-201709282/global/networks/p2-so1-201709282-vpc",
            "priority": 1000,
            "project": "p2-so1-201709282",
            "self_link": "https://www.googleapis.com/compute/v1/projects/p2-so1-201709282/global/firewalls/allow-vpc-connector-inbound",
            "source_ranges": [
              "10.10.1.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-vpc-connector-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-04-24T10:48:03.916-07:00",
            "deny": [],
            "description": "Permitir tráfico saliente desde la VPC hacia el VPC Connector",
            "destination_ranges": [
              "10.10.1.0/28"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/p2-so1-201709282/global/firewalls/allow-vpc-connector-outbound",
            "log_config": [],
            "name": "allow-vpc-connector-outbound",
            "network": "https://www.googleapis.com/compute/v1/projects/p2-so1-201709282/global/networks/p2-so1-201709282-vpc",
            "priority": 1000,
            "project": "p2-so1-201709282",
            "self_link": "https://www.googleapis.com/compute/v1/projects/p2-so1-201709282/global/firewalls/allow-vpc-connector-outbound",
            "source_ranges": [
              "10.10.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/p2-so1-201709282/global/networks/p2-so1-201709282-vpc",
            "mtu": 0,
            "name": "p2-so1-201709282-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "p2-so1-201709282",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/p2-so1-201709282/global/networks/p2-so1-201709282-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2024-04-20T08:18:31.125-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/p2-so1-201709282/regions/us-central1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/p2-so1-201709282/global/networks/p2-so1-201709282-vpc",
            "project": "p2-so1-201709282",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/p2-so1-201709282/regions/us-central1/routers/router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "router_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "p2-so1-201709282/us-central1/router/router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "p2-so1-201709282",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-20T08:18:31.206-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/p2-so1-201709282/regions/us-central1/subnetworks/p2-so1-201709282-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "p2-so1-201709282-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/p2-so1-201709282/global/networks/p2-so1-201709282-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "p2-so1-201709282",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/p2-so1-201709282/regions/us-central1/subnetworks/p2-so1-201709282-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}